ec2.tf
resource "tls_private_key" "pk" {
  algorithm = "RSA"
  rsa_bits  = 4096
}

resource "aws_key_pair" "generated_key" {
  key_name   = "mykey"
  public_key = tls_private_key.pk.public_key_openssh
  provisioner "local-exec" { # Create "myKey.pem" to your computer!!
    command = "echo '${tls_private_key.pk.private_key_pem}' > ./myKey.pem"
  }
}


data "aws_ami" "ubuntu" {
  most_recent = true

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd/ubuntu-focal-20.04-amd64-server-*"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }

  owners = ["099720109477"] # Canonical
}

resource "aws_instance" "bastionhost" {
  ami                         = data.aws_ami.ubuntu.id
  instance_type               = "t2.micro"
  associate_public_ip_address = true
  subnet_id                   = module.network.public1_id
  vpc_security_group_ids      = [aws_security_group.allow_ssh.id]
  provisioner "local-exec" {
    command = "echo ${self.public_ip} >> public_ip.txt"
  }


  tags = {
    Name = "bastionhost"
  }
}

resource "aws_instance" "application" {
  ami                    = data.aws_ami.ubuntu.id
  instance_type          = "t2.micro"
  subnet_id              = module.network.private1_id
  vpc_security_group_ids = [aws_security_group.allow_sshand3000.id]
  key_name               = aws_key_pair.generated_key.key_name

  tags = {
    Name = "application"
  }
}
